Add a converts module with a very rough draft MidiConverter.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,3 +2,6 @@
 name = "redact-composer"
 version = "0.1.0"
 edition = "2021"
+
+[dependencies]
+midly = { version = "0.5.3", default-features = false, features = ["std"] }
