--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+rand = "0.8.5"
 midly = { version = "0.5.3", default-features = false, features = ["std"] }
 num = "0.4.0"
 num-derive = "0.3.3"
 num-traits = "0.2.15"
+rand_chacha = "0.3.1"
