--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ num = "0.4.0"
 num-derive = "0.3.3"
 num-traits = "0.2.15"
 rand_chacha = "0.3.1"
+twox-hash = { version = "1.6.3", default-features = false, features = [] }
