--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ num-derive = "0.3.3"
 num-traits = "0.2.15"
 rand_chacha = "0.3.1"
 twox-hash = { version = "1.6.3", default-features = false, features = [] }
+serde = { version = "1.0", features = ["derive"] }
+typetag = "0.2.8"
