--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,5 @@ num-traits = "0.2.15"
 rand_chacha = "0.3.1"
 twox-hash = { version = "1.6.3", default-features = false, features = [] }
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0.99"
 typetag = "0.2.8"
