--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,5 @@ rand_chacha = "0.3.1"
 twox-hash = { version = "1.6.3", default-features = false, features = [] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.99"
+thiserror = "1.0"
 typetag = "0.2.8"
