More github action fix attempts.. sigh

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        rust: [ stable, nightly, 1.64.0 ]
+        rust: [ stable, nightly, 1.70.0 ]
         os: [ ubuntu, macos, windows ]
     timeout-minutes: 20
     steps:
@@ -68,7 +68,7 @@ jobs:
     timeout-minutes: 30
     steps:
       - uses: actions/checkout@v4
-      - uses: dtolnay/rust-toolchain@stable
+      - uses: dtolnay/rust-toolchain@nightly
         with:
           components: cargo-llvm-cov
       - run: cargo llvm-cov --html
