--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,8 +70,11 @@ jobs:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@nightly
         with:
-          components: cargo-llvm-cov
-      - run: cargo llvm-cov --html
+          components: llvm-tools-preview
+      - uses: taiki-e/install-action@cargo-llvm-cov
+
+      - run: cargo llvm-cov --all-features --workspace --html
+      - run: cargo llvm-cov report --lcov
 
       - uses: actions/upload-artifact@v4
         with:
