--- a/redact-composer-musical/Cargo.toml
+++ b/redact-composer-musical/Cargo.toml
@@ -5,7 +5,8 @@ version = "0.1.0"
 repository = "https://github.com/dousto/redact-composer"
 authors = ["Doug Stoeckmann <dousto@gmail.com>"]
 keywords = ["music", "theory"]
-license = "MIT OR Apache-2.0"
+readme = "../README.md"
+license = "MIT"
 edition = "2021"
 
 [dependencies]
