--- a/redact-composer-musical/Cargo.toml
+++ b/redact-composer-musical/Cargo.toml
@@ -12,7 +12,7 @@ edition = "2021"
 [dependencies]
 rand = { workspace = true }
 
-redact-composer-core = { optional = true, workspace = true  }
+redact-composer-core = { optional = true, path = "../redact-composer-core", version = "0.1.1" }
 serde = { optional = true, workspace = true }
 typetag = { optional = true, workspace = true }
 
