docs: Change `redact-composer-musical` to indicate it can be used standalone

--- a/redact-composer-musical/Cargo.toml
+++ b/redact-composer-musical/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "redact-composer-musical"
-description = "Music theory domain models and utilities packaged with redact-composer"
+description = "Music theory domain models and utilities packaged with redact-composer (may also be used standalone)"
 version = "0.3.2"
 repository = "https://github.com/dousto/redact-composer"
 authors = ["Doug Stoeckmann <dousto@gmail.com>"]
