--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,12 +5,15 @@ members = [
     "redact-composer-core",
     "redact-composer-musical",
     "redact-composer-midi",
+    "redact-composer-synthesis",
     "redact-composer",
 ]
 
 [workspace.dependencies]
+midly = { version = "0.5.3", default-features = false, features = ["std"] }
 serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0.108"
-typetag = "0.2.14"
-rand = "0.8.5"
-log = "0.4.20"
+serde_json = "1.0"
+typetag = "0.2"
+rand = "0.8"
+thiserror = "1.0"
+log = "0.4"
