--- a/redact-composer-core/Cargo.toml
+++ b/redact-composer-core/Cargo.toml
@@ -11,10 +11,10 @@ edition = "2021"
 [dependencies]
 redact-composer-derive = { path = "../redact-composer-derive", version = "0.1.1" }
 rand = { workspace = true }
+thiserror = { workspace = true }
+log = { workspace = true }
 rand_chacha = "0.3.1"
 twox-hash = { version = "1.6.3", default-features = false, features = [] }
-thiserror = "1.0.52"
-log = { version = "0.4.20", features = [] }
 
 serde = { optional = true, workspace = true }
 typetag = { optional = true, workspace = true }
