--- a/redact-composer-midi/Cargo.toml
+++ b/redact-composer-midi/Cargo.toml
@@ -12,7 +12,7 @@ edition = "2021"
 
 [dependencies]
 redact-composer-core = { path = "../redact-composer-core", version = "0.2.4" }
-midly = { version = "0.5.3", default-features = false, features = ["std"] }
+midly = { workspace = true }
 num = { version = "0.4.1", features = [] }
 num-derive = { version = "0.4.1", features = [] }
 num-traits = { version = "0.2.17", features = [] }
